fixed db credentials

--- a/.env.example
+++ b/.env.example
@@ -23,8 +23,8 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=db # 127.0.0.1 if not using docker
 DB_PORT=3306
-DB_DATABASE=tasks-db
-DB_USERNAME=tasks-user
+DB_DATABASE=leads-db
+DB_USERNAME=leads-user
 DB_PASSWORD=secret
 
 SESSION_DRIVER=database
